assets/style.css
:root {
    --primary-color: rgb(110, 29, 223);
    --bg-color: #ededed;
    --secondary-bg: #ffffff;
    --header-text: #ffffff;
    --text-color: #3c3c3c;
    --page-padding: 24px 48px;
    /* gradient for looping header background */
    --linear-gradient: linear-gradient(-45deg, #ab7dc6, #637cc0, #23a6d5, #23d5ab);
    --section-margin-bottom: 80px;
}

nav {
    position: sticky;
    top: 0;
    width: 100%;
    padding: 16px;
    background-color: var(--secondary-bg);
    text-align: center;
    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.1);;
}

.nav-links a {
    display: inline-block;
    padding: 8px 8px;
    font-size: 20px;
    font-weight: 600;
    text-decoration: none;
    color: var(--text-color)
}

.nav-links a:hover {
    border-bottom: 3px var(--primary-color) solid;
    text-decoration: none;
}

.nav-links a:active {
    font-weight: 700;
    color: var(--primary-color);
}

html {
    margin: 0 auto;
}

body {
    font-family: Helvetica, Arial, sans-serif;
    background-color: var(--bg-color);
    margin: 0 auto;
    color: var(--text-color);
}

main {
    margin: 0 auto;
    max-width: 1440px;
}

/* Background gradient is zoomed in */
header {
    padding: 24px 48px;
    background: var(--linear-gradient);
	background-size: 500% 500%;
	animation: gradient 15s ease infinite;
}

/* div to wrap headings to align left with main content */
.header-content {
    margin: 0 auto;
    max-width: 540px;
}

/* Header background gradient and moves from left to right in a loop */
@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

h1.sino {
    font-size: 200px;
    letter-spacing: -1px;
    margin-bottom: 40px;
    line-height: 200px;
    color: var(--header-text);
    font-weight: 700;
}

h1.intro {
    font-size: 80px;
    letter-spacing: -1px;
    margin-top: -24px;
    line-height: 80px;
    color: var(--header-text);
    font-weight: 700;
}

h1 {
    font-size: 48px;
    color: var(--header-text);
    font-weight: 100;
}

h2 {
    font-size: 48px;
    color: var(--text-color);
    margin-bottom: 16px;
}

hr {
    margin: 0 0 48px 0;
    width:80px;
    border-width:4px;
    border-style:solid;
    border-image-source: var(--linear-gradient);
    border-image-slice: 1;
    text-align: left;
}

h3 {
    font-size: 28px;
}

span.role:before {
    content: "✏️";
    margin-right: 16px;
}

span.location:before {
    content: "📍";
    margin-right: 16px;
}

main {
    padding: var(--page-padding);
}

p {
    font-size: 20px;
    color: var(--text-color);
    max-width: 420px;
    line-height: 26px;
}

a {
    text-decoration: none;
    transition: all 0.2s ease-in;
    font-weight: 600;
    color: var(--primary-color);
}

a:hover {
    color: var(--text-color);
    text-decoration: underline;
}

#about {
    margin-bottom: var(--section-margin-bottom);
    display: inline-block;
    max-width: 900px;
}

.profile-pic {
    display: inline-block;
    border-radius: 200px;
    margin-right: 40px;
}

.profile {
    display: inline-block;
    vertical-align: top;
}

.profile-text {
    font-size: 24px;
    line-height: 28px;
}



#projects {
    margin-bottom: var(--section-margin-bottom);
}


article {
    background-color: var(--secondary-bg);
    display: inline-block;
    height: 400px;
    width: 300px;
    padding: 16px;
    margin-right: 16px;
    margin-top: 24px;
    border-radius: 24px;
    box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
    transition: all 0.2s ease-in-out;
}

article:hover {
    scale: 0.95;
    box-shadow: none;
    color: var(--primary-color);
}

article img {
    border-radius: 12px 12px 0 0;
}

article h3 {
    line-height: 16px;
    margin-top: 16px;
    margin-bottom: 16px;
}

.caption {
    font-size: 16px;
    line-height: 20px;
}

.proj-tn {
    max-width: 300px;
}

#about {
    margin-bottom: var(--section-margin-bottom);
}

#contact {
    margin: 0 auto;
    max-width: 480px;
}

/* Form styling */

form {
    margin-bottom: 40px;
}

#username, #email {
    padding: 8px 16px;
    margin: 8px 0px 24px 0px;
    min-width: 300px;
    border-color: var(--primary-color);
    border-width: 2px;
}

label {
    font-weight: 600;
    font-size: 18px;
    color: var(--text-color)
}


textarea {
    resize: vertical;
    width: 300px;
    padding: 16px;
    margin-top: 8px;
    border-color: var(--primary-color);
    border-width: 2px;
}

button {
    padding: 16px 24px;
    margin: 24px 0px;
    border: none;
    background: var(--primary-color);
    color: var(--header-text);
    font-size: 18px;
    transition: all 0.2s ease-in-out;
}

button:hover {
    background: var(--bg-color);
    color: var(--primary-color);
    border: 2px solid;
}


footer {
    text-align: center;
    padding: 24px 16px;
    font-size: 16px;
    background: var(--linear-gradient);
    color: var(--header-text);
}

/* contact links */
li {
    display: inline-block;
    font-size: 20px;
    padding: 8px 24px;
}

.email-link:before {
    content: "✉️";
    margin-right: 8px;
}

.phone-link:before {
    content: "📞";
    margin-right: 8px;
}

.linkedin-link:before {
    content:"💼";
    margin-right: 8px;
}

/* Div to contain social links and centered text */
.social-links {
    text-align: center;
    margin-bottom: var(--section-margin-bottom);
}
/* text in social links section */
.social {
    font-size: 20px;
    font-weight: 500;
}

